--- a/my-final-app/src/App.css
+++ b/my-final-app/src/App.css
@@ -48,7 +48,7 @@
 
 .panelMoves {
   min-width: 300px;
-  background-color: red;
+  background-color: rgb(247, 247, 247);
   height: 100%;
   transition: min-width 1s;
   min-width: 0px;
@@ -84,7 +84,7 @@
 
 
 .listing {
-  border: 1px solid black;
+  border: 4px solid black;
   /* padding: 10px; */
   border-radius: 10px;
   flex-basis: 22%;
@@ -117,7 +117,7 @@
   20px
   100px;
   background-color: rgb(237, 237, 237);
-  padding: 15px;
+  padding: 25px;
   border-radius: 25px;
   h2 {
     text-align: left;
@@ -126,6 +126,7 @@
 
 .listing[is-active="false"]{
   opacity: 0;
+  
 }
 
 .listing .selectedHeader{
@@ -155,6 +156,8 @@
 .listing .quickControls {
   grid-column-start: 1;
   grid-column-end: 3;
+  grid-row-start: 3;
+  
 }
 
 .listing .listingImgs {
@@ -165,8 +168,10 @@
   grid-column-end: 3;
   grid-row: 2;
   overflow: hidden;
-  height: 100%;
+  height: 95%;
   border-radius: 15px;
+  padding: 2px;
+  
 }
 
 .listing .listingDetails {
@@ -211,6 +216,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  
 
   strong {
 
@@ -218,27 +224,31 @@
 }
 
 .listing[exceed-budget='aboveAverage']{
-  box-shadow: inset 0 0 15px 2px rgba(255, 0, 0, 0.6);
-  border-color: rgba(255, 0, 0, 0.6);
-
+  border: 1px solid black;
+  padding: 10;
+  opacity: .5;
 }
 
 .listing[exceed-budget='belowAverage']{
-  box-shadow: inset 0 0 15px 2px rgba(0, 255, 0, 0.6);
-  border-color: rgba(0, 255, 0, 0.6);
+  border: 1px solid black;
+  padding: 10;
+  opacity: 1;
 }
 
-/* Style for images in the listing */
+
 .listing img {
-  width: 100%; /* Adjust the width as needed */
+  width: 100%; 
   
-  height: auto; /* Keeps the aspect ratio */
+  height: auto;
+  
   border-radius: 5px;
   margin-bottom: 10px;
+  
 }
 
 .listing {
   font-size: 14px; 
+
 }
 
 .listing h2 {
@@ -259,6 +269,7 @@ nav {
   padding: 10px;
   width: 50%;
   margin: 0 auto; /* Centers the nav in the page */
+ 
 }
 
 nav a {
@@ -282,6 +293,7 @@ nav a.active {
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
 }
 
 .user-form h2 {
@@ -345,3 +357,101 @@ nav a.active {
   color: white;
 }
 
+.carouselContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; 
+  position: relative;
+  padding: 0 20px; 
+  max-width: 500px; 
+  margin: auto; 
+}
+
+.listingImgsCarousel {
+  flex: 1; 
+  text-align: center; 
+}
+
+.carouselButton {
+  background-color: rgba(0, 0, 0, 0.5); 
+  border: none;
+  cursor: pointer;
+  color: white;
+  font-size: 24px;
+  padding: 10px;
+  position: absolute;
+  top: 36.5%;
+  transform: translateY(-50%);
+  z-index: 2; 
+}
+
+.carouselButton.left {
+  left: 500px; 
+}
+
+.carouselButton.right {
+  right: 500px; 
+}
+
+.calculator-container {
+  text-align: center;
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.calculator-form {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  gap: 10px;
+  align-items: center;
+}
+
+.input-field {
+  margin-bottom: 10px;
+}
+
+.label {
+  font-weight: bold;
+}
+
+.budget-input {
+  max-width: 150px;
+  padding: 5px;
+  border: 1px solid #ddd;
+}
+
+.total-container {
+  margin-top: 20px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.total {
+  margin-bottom: 10px;
+}
+
+.address-input {
+  margin: 0 auto;
+  max-width: 200px;
+}
+
+.address {
+  padding: 5px;
+  border: 1px solid #ddd;
+}
+
+.save-button {
+  margin-left: 10px;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.save-button:hover {
+  background-color: #0056b3;
+}
