--- a/my-final-app/src/App.css
+++ b/my-final-app/src/App.css
@@ -182,7 +182,7 @@
     padding: 5px 15px 5px 15px;
     border-radius: 10px 10px 0 0;
 
-    background-color: rgb(246, 246, 246);
+    background-color: rgb(242, 236, 236);;
     text-align: left;
     width: min-content;
   }
@@ -201,7 +201,7 @@
 .listing .listingDetails .listingParams {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  background-color: rgb(246, 246, 246);
+  background-color: rgb(242, 236, 236);
   padding: 5px;
   overflow: hidden;
   margin: auto;
@@ -343,6 +343,14 @@ nav a.active {
   /* Add any additional styling you need here */
 }
 
+.top-left-logo {
+  position: absolute;
+  top: 40px; /* Adjust as needed */
+  left: 50px; /* Adjust as needed */
+  height: 100px; /* Adjust size as needed */
+  width: auto;
+}
+
 .user-form h2 {
   color: #333;
   margin-bottom: 20px;
@@ -388,20 +396,27 @@ nav a.active {
 }
 
 .favorite-image {
-  width: 500px; /* Adjust as needed */
-  height: auto; /* Maintain aspect ratio */
-  border-radius: 5px; /* Optional: rounded corners */
-  margin-right: 15px; /* Space between image and info */
+  width: 500px; 
+  height: 300px; 
+  object-fit: cover;
+  border-radius: 5px; 
+  margin-right: 15px; 
+  border: 3px solid #f3dcdc;
 }
 
 .favorite-info {
   display: flex;
   flex-direction: column;
-  align-items: flex-start; /* Align text to the start (left) */
+  align-items: flex-start; 
+}
+
+.favorite-info p, .favorite-info h1, .favorite-info h2, .favorite-info h3 {
+  line-height: 1.6; /* Reduces the space between lines of text */
+  margin-bottom: 5px; /* Reduces the space between text elements */
 }
 
 .button-highlight {
-  background-color: #4CAF50; /* Green background */
+  background-color: #4CAF50; 
   color: white;
 }
 
@@ -434,12 +449,17 @@ nav a.active {
 }
 
 .carouselButton.left {
-  left: 250px; 
+  top: 50%;
+  left: 25%; /* Adjust the percentage as needed */
+  transform: translateX(-50%); /* Adjust horizontally */
 }
 
 .carouselButton.right {
-  right: 250px; 
+  top: 50%;
+  right: 25%; /* Adjust the percentage as needed */
+  transform: translateX(50%); /* Adjust horizontally */
 }
+
 
 .calculator-container {
   text-align: center;
