--- a/my-final-app/src/App.css
+++ b/my-final-app/src/App.css
@@ -266,23 +266,23 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.5); /* Adjust color and opacity as needed */
-  border: 1px solid #ccc; /* Simple border, customize as needed */
+  background-color: rgba(255, 255, 255, 0.5); 
+  border: 1px solid #ccc; 
   padding: 10px;
   width: 50%;
-  margin: 0 auto; /* Centers the nav in the page */
+  margin: 0 auto; 
  
 }
 
 nav a {
   margin: 0 10px;
   text-decoration: none;
-  color: black; /* or any color you prefer */
+  color: black; 
 }
 
 nav a.active {
   font-weight: bold;
-  color: blue; /* or any color to indicate active link */
+  color: blue; 
 }
 
 .user-form {
@@ -295,11 +295,11 @@ nav a.active {
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-  background-size: contain; /* Ensure the image fits well */
-  background-repeat: no-repeat; /* Prevent image from repeating */
-  background-position: center; /* Center the image */
-  padding: 25px; /* Adjust padding as needed */
-  background-color: rgba(255, 255, 255, 0.4); /* Optional: Semi-transparent background for better readability */
+  background-size: contain; 
+  background-repeat: no-repeat; 
+  background-position: center; 
+  padding: 25px; 
+  background-color: rgba(255, 255, 255, 0.4); 
   
 
 }
@@ -308,7 +308,7 @@ nav a.active {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex: 1; /* Each container takes up an equal amount of space */
+  flex: 1; 
   position: relative;
   margin-top: 100px;
 }
@@ -317,7 +317,7 @@ nav a.active {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex: 1; /* Each container takes up an equal amount of space */
+  flex: 1; 
   position: relative;
   margin-top: 50px;
 }
@@ -326,28 +326,28 @@ nav a.active {
   position: absolute;
   top: 110%;
   left: 50%;
-  transform: translate(-50%, -50%); /* Center the logo */
-  z-index: -1; /* Place the logo behind the form */
-  max-width: 600px; /* Adjust the size as necessary */
+  transform: translate(-50%, -50%); 
+  z-index: -1; 
+  max-width: 600px; 
   height: auto;
 }
 
 .slogan {
   text-align: center;
-  margin-top: 50px; /* Adjust as needed */
-  font-size: 1.7em; /* Adjust font size as needed */
-  color: #333; /* Adjust the color as needed */
+  margin-top: 50px; 
+  font-size: 1.7em; 
+  color: #333; 
   font-family: 'Roboto Slab', serif; 
   font-weight: bold;
   font-style: italic;
-  /* Add any additional styling you need here */
+  
 }
 
 .top-left-logo {
   position: absolute;
-  top: 40px; /* Adjust as needed */
-  left: 50px; /* Adjust as needed */
-  height: 100px; /* Adjust size as needed */
+  top: 40px; 
+  left: 50px; 
+  height: 100px; 
   width: auto;
 }
 
@@ -369,7 +369,7 @@ nav a.active {
   padding: 10px;
   border-radius: 5px;
   border: none;
-  background-color: #007bff;
+  background-color: #135dac;
   color: white;
   cursor: pointer;
 }
@@ -379,20 +379,20 @@ nav a.active {
   background-color: #0056b3;
 }
 
-/* CSS for the container of the favorites list */
+
 .favorites-list {
   display: flex;
   flex-direction: column;
-  align-items: center; /* Center align items vertically in the container */
+  align-items: center; 
 }
 
-/* CSS for each favorite item */
+
 .favorite-item {
   display: flex;
-  align-items: center; /* Vertically align items in the middle */
-  justify-content: center; /* Horizontally center items */
-  margin-bottom: 20px; /* Space between favorite items */
-  width: 80%; /* Adjust width as needed */
+  align-items: center; 
+  justify-content: center; 
+  margin-bottom: 20px; 
+  width: 80%; 
 }
 
 .favorite-image {
@@ -411,8 +411,8 @@ nav a.active {
 }
 
 .favorite-info p, .favorite-info h1, .favorite-info h2, .favorite-info h3 {
-  line-height: 1.6; /* Reduces the space between lines of text */
-  margin-bottom: 5px; /* Reduces the space between text elements */
+  line-height: 1.6; 
+  margin-bottom: 5px; 
 }
 
 .button-highlight {
@@ -450,14 +450,14 @@ nav a.active {
 
 .carouselButton.left {
   top: 50%;
-  left: 25%; /* Adjust the percentage as needed */
-  transform: translateX(-50%); /* Adjust horizontally */
+  left: 25%; 
+  transform: translateX(-50%); 
 }
 
 .carouselButton.right {
   top: 50%;
-  right: 25%; /* Adjust the percentage as needed */
-  transform: translateX(50%); /* Adjust horizontally */
+  right: 25%; 
+  transform: translateX(50%); 
 }
 
 
@@ -523,3 +523,29 @@ nav a.active {
 .save-button:hover {
   background-color: #0056b3;
 }
+
+.search-container {
+  margin-bottom: 10px; 
+  
+  
+}
+.search-heading {
+  font-size: 1.2em; 
+  
+}
+
+
+.budget-container {
+  margin-top: 10px; 
+  
+}
+
+.budget-calc {
+  font-size: 1.5em; 
+  
+}
+
+.fav {
+  font-size: 1.5em;
+}
+
